# OCAML_tuto

./: README.txt  Readme.md  tuto1.ml
.github/workflows/: ocaml_demo.yml
example1/: environment.ml  simulation.ml  system.ml
example2/: dune-project
example2/lib/: dune
example2/lib/bus/: bus.ml
example2/lib/dpu/: dpu.ml
example2/lib/environment/: environment.ml
example2/lib/equipment/: equipment.ml
example2/lib/obc/: obc.ml
example2/lib/simulation/: simulation.ml  simulation.mli
example2/lib/system/: system.ml
example3/: dune-project
example3/lib/: dune  function_description.ml  hello2.c  type_description.ml
example3/lib/hello/: dune  hello.h  hello1.c
example4/: Readme.md  dune-project
example4/lib/: dune
example4/test/: dune
